# llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
evals/: CLASSIFICATION_FINDINGS.md  EXTRACTION_FINDINGS.md  LATENCY_FINDINGS.md  SUMMARIZATION_FINDINGS.md  clinical_eval_set.jsonl
harness/: cache.py  retry.py  runner.py  scorer.py
harness/providers/: base.py  gemini_provider.py  groq_provider.py  ollama_provider.py
scripts/: inspect_task.py  plot_results.py  run_eval.py
tests/: test_cache.py  test_providers.py  test_scorer.py
